[package]
name = "mc-ping"
version = "0.0.1"
edition = "2024"
authors = ["cxdsad"]
keywords = ["minecraft", "pinger", "mc", "non-blocking", "tcp"]
categories = ["asynchronous", "network-programming"]
description = "Simple Java Minecraft Server Pinger"

[features]
resolve = []


[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
tokio = {version = "1.47.1", features = ["full"]}
anyhow = "1.0.98"
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }